# QRStorageOrganizer

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.musl  Dockerfile.web  Settings.toml  build.gradle  deployment.yaml  diesel.toml  docker-compose.yaml  packaged.yaml  sam.yaml  serverless.yml  versions.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/androidTest/java/com/qrorganizer/qrstorageorganizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qrorganizer/qrstorageorganizer/: Injection.kt  MainActivity.kt
app/src/main/java/com/qrorganizer/qrstorageorganizer/persistance/: Item.kt  ItemDao.kt  ItemDatabase.kt
app/src/main/java/com/qrorganizer/qrstorageorganizer/ui/: ItemViewModel.kt  ViewModelFactory.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/qrorganizer/qrstorageorganizer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
manifests/: deployment.yaml
migrations/20170124012402_create_posts/: down.sql  up.sql
src/: config.rs  fixtures.rs  lib.rs  models.rs  schema.rs  types.rs
src/datastore/: mod.rs
src/datastore/firebase/: mod.rs
src/datastore/sqlite/: mod.rs  schema.rs
src/dynamodb/: crud.rs  mod.rs  qruuid.rs
src/im_encoder/: mod.rs
src/model/: mod.rs  qrcode.rs  qrgroup.rs  qrimage.rs  qritem.rs  qruuid.rs  schema.rs
src/pdf_generator/: mod.rs
src/rest/: mod.rs
src/storage/: image_store.rs  mod.rs
tests/: filesystem_test.rs  integration_test.rs  integration_test_firestore.rs  model_test.rs  pdf_test.rs  wasaba_test.rs
