[package]
name = "qrstore"
version = "0.1.0"
authors = ["Arvid Böttiger <bottiger@gmail.com>"]
edition = "2018"
autobins = false

#[lib]
#name = "qrstore"
#crate-type = ["rlib", "dylib"] # could be `staticlib` as well
#build = "build.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

#[[bin]]
#name = "rest"
#path = "src/bin/rest.rs"

#[[bin]]
#name = "rocket"
#path = "src/bin/rocket.rs"

# AWS Lambda
#[[bin]]
#name = "bootstrap"
#path = "src/bin/lambda.rs"

# AWS Lambda - Serverless
#[[bin]]
#name = "serverless"
#path = "src/bin/serverless.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
dotenv = "0.15"
rand  = "0.8"
chrono = {version ="^0.4", features = ["serde", "clock", "time"]}
clap = { version = "4.5.7", features = ["derive"]}
config = "0.14"

qrcode = "0.14"
image = "0.25.1"
#bardecoder = "0.2"
fxhash = "0.2.1"
printpdf = { version = "0.7", features = ["embedded_images"] }

env_logger = "0.11.3"

#lambda-web = { version = "0.1.6", features=["rocket05"] }
#rocket = "0.5.0-rc.1"

simple-error = "0.2.2"

#rusoto_dynamodb = "0.46"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
rusoto_credential = "0.48"

firestore = "0.41"

futures = "0.3.30"
tokio = "1.38"
log = "0.4.21"
uuid = { version = "1.8", features = ["serde", "v5"] }

base64 = "0.22.1"
base-62 = "0.1.1"
harsh = "0.2.2"

vartyint = "0.3"

sha3 = "0.10.8"
bytes = "1.6"

serde = "1.0.203"
serde_json = "1.0.117"
serde_derive = "1.0.203"
simple_logger = "5.0.0"

openssl = { version = "0.10.64", features = ["vendored"] }